examples/test/testpolicy13688.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13688
  namespace: namespace393
spec:
  podSelector:
    matchLabels:
      key11: value37
      key35: value35
      key46: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value4
          key22: value3
      podSelector:
        matchLabels:
          key17: value48
